@@ -1,7 +1,7 @@
 Package: GSEABase
 Type: Package
 Title: Gene set enrichment data structures and methods
-Version: 1.23.1
+Version: 1.23.2
 Author: Martin Morgan, Seth Falcon, Robert Gentleman
 Maintainer: Bioconductor Package Maintainer <maintainer@bioconductor.org>
 Description: This package provides classes and methods to support
@@ -10,7 +10,7 @@ License: Artistic-2.0
 Depends: R (>= 2.6.0), BiocGenerics (>= 0.3.2), Biobase (>= 2.17.8), annotate, 
          methods, graph (>= 1.37.2)
 Suggests: hgu95av2.db, GO.db, org.Hs.eg.db, Rgraphviz, ReportingTools
-Imports: BiocGenerics, annotate, AnnotationDbi, Biobase, graph, methods, XML
+Imports: AnnotationDbi, XML
 LazyLoad: yes
 biocViews: Infrastructure, Bioinformatics
 Collate: utilities.R
